fixed error with wrapping text of pet name at max char limit

--- a/src/components/Pet/index.module.css
+++ b/src/components/Pet/index.module.css
@@ -60,6 +60,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  flex-wrap: wrap;
   width: 100%;
   margin: 0 0 1rem 0;
 }
